Finished redoing the CSS, updated Lore Icebergs

--- a/pages/early_january.html
+++ b/pages/early_january.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Early January 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_style.css">
+    <link rel="stylesheet" href="../styles/event_style1.css">
 
 </head>
 <body>
     <div class="page_title">January 2024</div>
     <div class="page_subtitle">New Year's Eve Fireworks</div>
 
-
     <div class="container">
-        <div class="event_new_years_1"></div>
-        <div class="event_new_years_2"></div>
-        <div class="event_new_years_3"></div>
-        <div class="event_new_years_4"></div>
+        <div class="events"id="event_new_years_1"></div>
+        <div class="events"id="event_new_years_2"></div>
+        <div class="events"id="event_new_years_3"></div>
+        <div class="events"id="event_new_years_4"></div>
     </div>
 
     
