--- a/pages/icebergs.html
+++ b/pages/icebergs.html
@@ -14,12 +14,11 @@
     <div class="page_title">Lore Icebergs</div>
 
     <div class="container">
-        <div class="berg_server_iceberg"></div>
-        <div class="berg_bub_iceberg"></div>
-        <div class="berg_xan_iceberg"></div>
-        <div class="berg_hash_iceberg"></div>
-    
-
+        <div class="icebergs" id="berg_server_iceberg"></div>
+        <div class="icebergs" id="berg_bub_iceberg"></div>
+        <div class="icebergs" id="berg_xan_iceberg"></div>
+        <div class="icebergs" id="berg_visc_iceberg"></div>
+        <div class="icebergs" id="berg_hash_iceberg"></div>
     </div>
 
     <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
