--- a/pages/late_december.html
+++ b/pages/late_december.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Late December 2023</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_style.css">
+    <link rel="stylesheet" href="../styles/event_style1.css">
 
 
 </head>
@@ -15,11 +15,11 @@
 
 
     <div class="container">
-       <div class="event_december_court"></div>
-       <div class="event_december_court_judge"></div>
-       <div class="event_december_court_judge_attacked"></div>
-       <div class="event_traveler"></div>
-       <div class="event_traveler_entrance"></div>
+       <div class="events"id="event_december_court"></div>
+       <div class="events"id="event_december_court_judge"></div>
+       <div class="events"id="event_december_court_judge_attacked"></div>
+       <div class="events"id="event_traveler"></div>
+       <div class="events"id="event_traveler_entrance"></div>
     </div>
 
     
