--- a/pages/late_january.html
+++ b/pages/late_january.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Late January 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_after_style.css">
+    <link rel="stylesheet" href="../styles/event_style2.css">
 
 
 </head>
@@ -15,12 +15,11 @@
 
 
     <div class="container">
-        <div class="event_flower_fight_1"></div>
-        <div class="event_flower_fight_2"></div>
-        <div class="event_survivor_1"></div>
-        <div class="event_survivor_2"></div>
-        <div class="event_ipa_overload"></div>
-
+        <div class="events" id="event_flower_fight_1"></div>
+        <div class="events" id="event_flower_fight_2"></div>
+        <div class="events" id="event_survivor_1"></div>
+        <div class="events" id="event_survivor_2"></div>
+        <div class="events" id="event_ipa_overload"></div>
     </div>
 
     
