--- a/pages/late_october.html
+++ b/pages/late_october.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Late October 2023</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_style.css">
+    <link rel="stylesheet" href="../styles/event_style1.css">
 
 
 </head>
@@ -14,10 +14,10 @@
     <div class="page_subtitle">Halloween Competitions</div>
 
     <div class="container">
-        <div class="event_bee_halloween"></div>
-        <div class="event_nova_halloween"></div>
-        <div class="event_nzzketch_halloween"></div>
-        <div class="event_picture_box_halloween"></div>
+        <div class="events" id="event_bee_halloween"></div>
+        <div class="events" id="event_nova_halloween"></div>
+        <div class="events" id="event_nzzketch_halloween"></div>
+        <div class="events" id="event_picture_box_halloween"></div>
     </div>
     
 
