--- a/pages/mid_january.html
+++ b/pages/mid_january.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mid January 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_after_style.css">
+    <link rel="stylesheet" href="../styles/event_style2.css">
 
 
 </head>
@@ -15,8 +15,8 @@
 
 
     <div class="container">
-        <div class="event_wedding_1"></div>
-        <div class="event_wedding_2"></div>
+        <div class="events" id="event_wedding_1"></div>
+        <div class="events" id="event_wedding_2"></div>
     </div>
 
     
