--- a/pages/mid_june.html
+++ b/pages/mid_june.html
@@ -15,12 +15,12 @@
 
 
     <div class="container">
-        <div class="misc_dogs"></div>
-        <div class="misc_hash_base"></div>
-        <div class="misc_pork_lord"></div>
-        <div class="misc_quiz"></div>
-        <div class="misc_rat_builds"></div>
-        <div class="misc_two"></div>
+        <div class="misc" id="misc_dogs"></div>
+        <div class="misc" id="misc_hash_base"></div>
+        <div class="misc" id="misc_pork_lord"></div>
+        <div class="misc" id="misc_quiz"></div>
+        <div class="misc" id="misc_rat_builds"></div>
+        <div class="misc" id="misc_two"></div>
     </div>
 
     
