--- a/pages/notable_builds.html
+++ b/pages/notable_builds.html
@@ -7,35 +7,25 @@
     <link rel="stylesheet" href="../main_style.css">
     <link rel="stylesheet" href="../styles/build_style.css">
     
-
-
 </head>
 <body>
     <div class="page_title">Notable Builds</div>
 
     <div class="container">
-        <div class="build_hash_new_base"></div>
-        <div class="build_500am_base"></div>
-        <div class="build_demon"></div>
-
-        <div class="build_mail"></div>
-        <div class="build_reno_tea_room"></div>
-    
-        <div class="build_prince_rat_axolotls"></div>
-        <div class="build_pink_spawn"></div>
-
-
-        <div class="build_aedan_house"></div>
-        <div class="build_joe_utopia"></div>
-
-        <div class="build_tatooine"></div>
-
-        <div class="build_dreamwick"></div>
-        <div class="build_joe_city"></div>
-
-        <div class="build_graveyard"></div>
-        <div class="build_500am_storage"></div>
-
+        <div class = "builds" id="build_hash_new_base"></div>
+        <div class = "builds" id="build_500am_base"></div>
+        <div class = "builds" id="build_demon"></div>
+        <div class = "builds" id="build_mail"></div>
+        <div class = "builds" id="build_reno_tea_room"></div>
+        <div class = "builds" id="build_prince_rat_axolotls"></div>
+        <div class = "builds" id="build_pink_spawn"></div>
+        <div class = "builds" id="build_aedan_house"></div>
+        <div class = "builds" id="build_joe_utopia"></div>
+        <div class = "builds" id="build_tatooine"></div>
+        <div class = "builds" id="build_dreamwick"></div>
+        <div class = "builds" id="build_joe_city"></div>
+        <div class = "builds" id="build_graveyard"></div>
+        <div class = "builds" id="build_500am_storage"></div>
     </div>
 
     <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
