--- a/pages/november.html
+++ b/pages/november.html
@@ -15,11 +15,11 @@
 
 
     <div class="container">
-        <div class="misc_akoot_friends_sitting"></div>
-        <div class="misc_akoots"></div>
-        <div class="misc_double_akoots"></div>
-        <div class="misc_maltsburg_roads"></div>
-        <div class="misc_sego_house_purchase"></div>
+        <div class="misc" id="misc_akoot_friends_sitting"></div>
+        <div class="misc" id="misc_akoots"></div>
+        <div class="misc" id="misc_double_akoots"></div>
+        <div class="misc" id="misc_maltsburg_roads"></div>
+        <div class="misc" id="misc_sego_house_purchase"></div>
     </div>
 
     
