--- a/pages/september.html
+++ b/pages/september.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>September 2023</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_style.css">
+    <link rel="stylesheet" href="../styles/event_style1.css">
 
 
 </head>
@@ -14,11 +14,10 @@
     <div class="page_subtitle">Mahoose's Birthday</div>
 
     <div class="container">
-        <div class="event_mahoose_birthday_1"></div>
-        <div class="event_mahoose_birthday_2"></div>
-   
-        <div class="event_mahoose_boats"></div>
-        <div class="event_mahoose_many"></div>
+        <div class="events" id="event_mahoose_birthday_1"></div>
+        <div class="events" id="event_mahoose_birthday_2"></div>
+        <div class="events" id="event_mahoose_boats"></div>
+        <div class="events" id="event_mahoose_many"></div>
     </div>
 
     <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
