--- a/pages/april.html
+++ b/pages/april.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>April 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_after_style.css">
+    <link rel="stylesheet" href="../styles/event_style2.css">
 
 
 </head>
@@ -15,10 +15,10 @@
 
 
     <div class="container">
-        <div class="event_mail_1"></div>
-        <div class="event_mail_2"></div>
-        <div class="event_bee_farm"></div>
-        <div class="event_sizzle_stand"></div>
+        <div class="events" id="event_mail_1"></div>
+        <div class="events" id="event_mail_2"></div>
+        <div class="events" id="event_bee_farm"></div>
+        <div class="events" id="event_sizzle_stand"></div>
     </div>
 
     
