--- a/pages/early_december.html
+++ b/pages/early_december.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Early December 2023</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_style.css">
+    <link rel="stylesheet" href="../styles/event_style1.css">
 
 
 </head>
@@ -15,13 +15,12 @@
 
 
     <div class="container">
-        <div class="event_akoot_cafe"></div>
-        <div class="event_akoot_cafe_sitting"></div>
-        <div class="event_christmas_friends"></div>
-        <div class="event_christmas_friends_after"></div>
-        <div class="event_christmas_tree"></div>
-        <div class="event_christmas_trees"></div>
-
+        <div class="events"id="event_akoot_cafe"></div>
+        <div class="events"id="event_akoot_cafe_sitting"></div>
+        <div class="events"id="event_christmas_friends"></div>
+        <div class="events"id="event_christmas_friends_after"></div>
+        <div class="events"id="event_christmas_tree"></div>
+        <div class="events"id="event_christmas_trees"></div>
     </div>
 
     
