--- a/pages/early_june.html
+++ b/pages/early_june.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Early June 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_after_after_style.css">
+    <link rel="stylesheet" href="../styles/event_style3.css">
 
 
 </head>
@@ -15,14 +15,14 @@
 
 
     <div class="container">
-        <div class="event_witch_1"></div>
-        <div class="event_witch_2"></div>
-        <div class="event_witch_3"></div>
-        <div class="event_witch_4"></div>
-        <div class="event_witch_5"></div>
-        <div class="event_witch_6"></div>
-        <div class="event_witch_7"></div>
-        <div class="event_witch_8"></div>
+        <div class="events" id="event_witch_1"></div>
+        <div class="events" id="event_witch_2"></div>
+        <div class="events" id="event_witch_3"></div>
+        <div class="events" id="event_witch_4"></div>
+        <div class="events" id="event_witch_5"></div>
+        <div class="events" id="event_witch_6"></div>
+        <div class="events" id="event_witch_7"></div>
+        <div class="events" id="event_witch_8"></div>
     </div>
 
     
