--- a/pages/early_may.html
+++ b/pages/early_may.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Early May 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_after_after_style.css">
+    <link rel="stylesheet" href="../styles/event_style3.css">
 
 
 </head>
@@ -15,9 +15,9 @@
 
 
     <div class="container">
-        <div class="event_joe_donalds_1"></div>
-        <div class="event_min_wage"></div>
-        <div class="event_joe_donalds_2"></div>
+        <div class="events" id="event_joe_donalds_1"></div>
+        <div class="events" id="event_min_wage"></div>
+        <div class="events" id="event_joe_donalds_2"></div>
     </div>
 
     
