--- a/pages/early_october.html
+++ b/pages/early_october.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Early October 2023</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_style.css">
+    <link rel="stylesheet" href="../styles/event_style1.css">
 
 
 </head>
@@ -14,8 +14,8 @@
     <div class="page_subtitle">Opening of Second Shopping District</div>
 
     <div class="container">
-        <div class="event_taco_bell"></div>
-        <div class="event_mahoose_shop"></div>
+        <div class="events" id="event_taco_bell"></div>
+        <div class="events" id="event_mahoose_shop"></div>
     </div>
 
     
