--- a/pages/february.html
+++ b/pages/february.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>February 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_after_style.css">
+    <link rel="stylesheet" href="../styles/event_style2.css">
 
 
 </head>
@@ -15,8 +15,7 @@
 
 
     <div class="container">
-        <div class="event_sizzle"></div>
-
+        <div class="events" id="event_sizzle"></div>
     </div>
 
     
