--- a/pages/late_may.html
+++ b/pages/late_may.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Late May 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_after_after_style.css">
+    <link rel="stylesheet" href="../styles/event_style3.css">
 
 
 </head>
@@ -15,15 +15,15 @@
 
 
     <div class="container">
-        <div class="event_hash_1"></div>
-        <div class="event_hash_2"></div>
-        <div class="event_hash_3"></div>
-        <div class="event_hash_4"></div>
-        <div class="event_hash_5"></div>
-        <div class="event_hash_6"></div>
-        <div class="event_hash_7"></div>
-        <div class="event_wanted"></div>
-        <div class="event_bubbly_tnt"></div>
+        <div class="events" id="event_hash_1"></div>
+        <div class="events" id="event_hash_2"></div>
+        <div class="events" id="event_hash_3"></div>
+        <div class="events" id="event_hash_4"></div>
+        <div class="events" id="event_hash_5"></div>
+        <div class="events" id="event_hash_6"></div>
+        <div class="events" id="event_hash_7"></div>
+        <div class="events" id="event_wanted"></div>
+        <div class="events" id="event_bubbly_tnt"></div>
     </div>
 
     
