--- a/pages/march.html
+++ b/pages/march.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>March 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_after_style.css">
+    <link rel="stylesheet" href="../styles/event_style2.css">
 
 
 </head>
@@ -15,14 +15,11 @@
 
 
     <div class="container">
-        <div class="event_end_1"></div>
-        <div class="event_end_2"></div>
-
-        <div class="event_march_laying_1"></div>
-        <div class="event_march_laying_2"></div>
-        <div class="event_march_laying_3"></div>
-
-
+        <div class="events" id="event_end_1"></div>
+        <div class="events" id="event_end_2"></div>
+        <div class="events" id="event_march_laying_1"></div>
+        <div class="events" id="event_march_laying_2"></div>
+        <div class="events" id="event_march_laying_3"></div>
     </div>
 
     
