Added more Mid June

--- a/pages/end.html
+++ b/pages/end.html
@@ -37,7 +37,7 @@
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = '../pages/mid_june.html';
+                window.location.href = '../pages/mid_june_3.html';
             });
         </script>
     </div>
