--- a/pages/mid_june_1.html
+++ b/pages/mid_june_1.html
@@ -30,7 +30,7 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = '../pages/end.html';
+            window.location.href = '../pages/mid_june_2.html';
         });
     </script>
     </div>
