--- a/pages/mid_june_3.html
+++ b/pages/mid_june_3.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Early June 2024</title>
+    <title>Mid June 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_style3.css">
+    <link rel="stylesheet" href="../styles/event_style4.css">
 
 
 </head>
 <body>
     <div class="page_title">June 2024</div>
-    <div class="page_subtitle">Witch Hut Hunt</div>
+    <div class="page_subtitle">Survivor (Again)</div>
 
 
     <div class="container">
-        <div class="events" id="event_witch_1"></div>
-        <div class="events" id="event_witch_2"></div>
-        <div class="events" id="event_witch_3"></div>
-        <div class="events" id="event_witch_4"></div>
-        <div class="events" id="event_witch_5"></div>
-        <div class="events" id="event_witch_6"></div>
-        <div class="events" id="event_witch_7"></div>
-        <div class="events" id="event_witch_8"></div>
+        <div class="events" id="event_survivor_3"></div>
+        <div class="events" id="event_survivor_4"></div>
+        <div class="events" id="event_survivor_5"></div>
+        <div class="events" id="event_survivor_8"></div>
+        <div class="events" id="event_survivor_6"></div>
+        <div class="events" id="event_survivor_7"></div>
+
     </div>
 
     
@@ -32,14 +31,14 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = '../pages/mid_june_1.html';
+            window.location.href = '../pages/end.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = '../pages/late_may.html';
+                window.location.href = '../pages/mid_june_2.html';
             });
         </script>
     </div>
