--- a/pages/members.html
+++ b/pages/members.html
@@ -48,6 +48,7 @@
     <div class="heads" id="head_sloth"></div>
     <div class="heads" id="head_axo"></div>
     <div class="heads" id="head_salt"></div>
+    <div class="heads" id="head_pirk"></div>
     <div class="heads" id="head_hash"></div>
 </div>
 <p>(In no particular order)</p>
