Added more Mid June

--- a/pages/mid_june_4.html
+++ b/pages/mid_june_4.html
@@ -11,17 +11,23 @@
 </head>
 <body>
     <div class="page_title">June 2024</div>
-    <div class="page_subtitle">Survivor (Again)</div>
+    <div class="page_subtitle">Hash's VSCO</div>
 
 
     <div class="container">
-        <div class="events" id="event_survivor_3"></div>
-        <div class="events" id="event_survivor_4"></div>
-        <div class="events" id="event_survivor_5"></div>
-        <div class="events" id="event_survivor_8"></div>
-        <div class="events" id="event_survivor_6"></div>
-        <div class="events" id="event_survivor_7"></div>
-
+        <div class="events" id="event_stack_1"></div>
+        <div class="events" id="event_stack_2"></div>
+        <div class="events" id="event_akoot_tall"></div>
+        <div class="events" id="event_boat"></div>
+        <div class="events" id="event_bub_dragon"></div>
+        <div class="events" id="event_hash_afk"></div>
+        <div class="events" id="event_pirk_fox"></div>
+        <div class="events" id="event_ipa_dog"></div>
+        <div class="events" id="event_500am_sits"></div>
+        <div class="events" id="event_rat_farm"></div>
+        <div class="events" id="event_pookie"></div>
+        <div class="events" id="event_before"></div>
+        <div class="events" id="event_after"></div>
     </div>
 
     
@@ -31,14 +37,14 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = '../pages/mid_june_4.html';
+            window.location.href = '../pages/end.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = '../pages/mid_june_2.html';
+                window.location.href = '../pages/mid_june_3.html';
             });
         </script>
     </div>
